# deal-scout

./: .env  .env.example  .env.production  .gitignore  00_START_HERE.md  ALEMBIC_FIX_IMPLEMENTATION.md  ALEMBIC_IMPLEMENTATION_SUMMARY.txt  API_STATUS_VERIFICATION.md  APPLICATION_STATUS.md  COMPREHENSIVE_TEST_REPORT.md  CONSUMER_ASSESSMENT.md  CORS_CONFIGURATION_VERIFIED.md  DATABASE_DEBUG_REPORT.md  DATABASE_FIXES.md  DELIVERY_SUMMARY.md  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT_ENVIRONMENT_READY.md  DEVELOPMENT_ROADMAP_VISUAL.md  DOCUMENTATION_INDEX.md  Deal-Scout-Phase4.postman_collection.json  EBAY_IMPLEMENTATION_SUMMARY.md  EBAY_INTEGRATION_GUIDE.md  FEATURE_IMPLEMENTATION_SUMMARY.md  FINAL_COMPLETION_SUMMARY.md  FINAL_STATUS.md  FINAL_TESTING_REPORT.md  FINAL_TESTING_SUMMARY.md  FINAL_VERIFICATION.md  FIX_VERIFICATION_REPORT.md  GO_LIVE_CHECKLIST.md  IMMEDIATE_ACTION_PLAN.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INCIDENT_RUNBOOKS.md  LIVE_SCAN_IMPLEMENTATION.md  (+100 more)
backend/: .dockerignore  Dockerfile  alembic.ini  celerybeat-schedule  create_admin.py  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  test.db  update_demo_role.py  wait-for-db.sh
backend/alembic/: env.py
backend/app/: __init__.py  config.py  health.py  logging_config.py  main.py  sentry_config.py  worker.py
backend/deal_scout_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: seed_database.py
backend/tests/: conftest.py  test_copywriter.py  (+12 more)
(+218 files in other folders)
